	the CRYPT_GENSALT_IMPLEMENTS_DEFAULT_PREFIX feature-test macro is
	defined to 0, which means libxcrypt does not provide a best-choice
	default prefix.

	libnss_tcb: Apply proper soname during linking.
	* libs/Makefile: Apply proper soname to libnss_tcb.so.2.

	libnss_tcb: Drop unneeded LIBNSL from linked libraries.
	* libs/Makefile: Stop linking libnss_tcb.so.2 against LIBNSL.

2021-09-25  Dmitry V. Levin  <ldv at owl.openwall.com>

	Add github CI.
	This enables a whitespace check and a bunch of build checks using
	several versions of gcc and clang.
	* .gitattributes: New file.
	* .github/workflows/ci.yml: Likewise.
	* ci/install-dependencies.sh: Likewise.
	* ci/run-build-and-tests.sh: Likewise.
	* LICENSE: Mention the license of CI scripts.

	* .gitignore: New file.

	* pam_tcb/pam_tcb.8: Remove trailing whitespace.
	* pam_tcb/support.c: Likewise.

2021-01-20  Solar Designer  <solar at owl.openwall.com>

	* README: Mention libxcrypt, use https URLs.

2021-01-11  Solar Designer  <solar at owl.openwall.com>

	* tcb.spec: 1.2.
	* LICENSE: Update copyright years for Dmitry's recent contributions.

2020-07-16  Dmitry V. Levin  <ldv at owl.openwall.com>

	tcb_chkpwd: remove the last remaining piece of NIS+ support.
	* progs/tcb_chkpwd.c (unix_verify_password): Remove special handling
	of NIS+ password entries.

	tcb_unconvert: print error diagnostics if the final chown fails.
	* progs/tcb_unconvert.c (main): Print error diagnostics in an unlikely
	case of an error returned by the final chown invocation.  This does
	not affect the exit status of tcb_unconvert, though, since the final
	chown does not affect the result of conversion.

2020-07-15  Dmitry V. Levin  <ldv at owl.openwall.com>

	pam_tcb: fix harmless -Wmissing-field-initializers compilation warning.
	* pam_tcb/support.c (fake_pw): Explicitly initialize remaining members
	of struct passwd with zero.

	pam_tcb: fix harmless -Wpointer-sign compilation warnings.