@@ -5,8 +5,8 @@ all clean:
 install-non-root: install
 
 install:
-	mkdir -p $(DESTDIR)$(MANDIR)/man5
-	mkdir -p $(DESTDIR)/usr/include
+	$(MKDIR) -p -m 755 $(DESTDIR)$(MANDIR)/man5
+	$(MKDIR) -p -m 755 $(DESTDIR)/usr/include
 
-	install -m 644 tcb.5 $(DESTDIR)$(MANDIR)/man5/
-	install -m 644 ../include/tcb.h $(DESTDIR)/usr/include/
+	$(INSTALL) -m 644 tcb.5 $(DESTDIR)$(MANDIR)/man5/
+	$(INSTALL) -m 644 ../include/tcb.h $(DESTDIR)/usr/include/
