@@ -19,21 +19,21 @@ $(CHKPWD): $(CHKPWD).o
 	$(CC) $(CFLAGS) -c $< -o $@
 
 install-non-root: install-common
-	install -d -m 710 $(DESTDIR)$(LIBEXECDIR)/chkpwd
-	install -m 700 $(CHKPWD) $(DESTDIR)$(LIBEXECDIR)/chkpwd/
+	$(INSTALL) -d -m 710 $(DESTDIR)$(LIBEXECDIR)/chkpwd
+	$(INSTALL) -m 700 $(CHKPWD) $(DESTDIR)$(LIBEXECDIR)/chkpwd/
 
 install: install-common
-	install -d -o root -g chkpwd -m 710 $(DESTDIR)$(LIBEXECDIR)/chkpwd
-	install -m 2711 -o root -g shadow $(CHKPWD) \
+	$(INSTALL) -d -o root -g chkpwd -m 710 $(DESTDIR)$(LIBEXECDIR)/chkpwd
+	$(INSTALL) -m 2711 -o root -g shadow $(CHKPWD) \
 		$(DESTDIR)$(LIBEXECDIR)/chkpwd/
 
 install-common:
-	mkdir -p $(DESTDIR)$(SBINDIR)
-	mkdir -p $(DESTDIR)$(MANDIR)/man8
-	install -m 700 $(CONVERT) $(DESTDIR)$(SBINDIR)/
-	install -m 700 $(UNCONVERT) $(DESTDIR)$(SBINDIR)/
-	install -m 644 $(CONVERT).8 $(DESTDIR)$(MANDIR)/man8/
-	install -m 644 $(UNCONVERT).8 $(DESTDIR)$(MANDIR)/man8/
+	$(MKDIR) -p -m 755 $(DESTDIR)$(SBINDIR)
+	$(MKDIR) -p -m 755 $(DESTDIR)$(MANDIR)/man8
+	$(INSTALL) -m 700 $(CONVERT) $(DESTDIR)$(SBINDIR)/
+	$(INSTALL) -m 700 $(UNCONVERT) $(DESTDIR)$(SBINDIR)/
+	$(INSTALL) -m 644 $(CONVERT).8 $(DESTDIR)$(MANDIR)/man8/
+	$(INSTALL) -m 644 $(UNCONVERT).8 $(DESTDIR)$(MANDIR)/man8/
 
 clean:
 	rm -f $(CONVERT) $(UNCONVERT) $(CHKPWD) *.o *~
